# ModeloMrlAmisPythonService

./: .dockerignore  .env  CHANGELOG-GRPC-RESTRUCTURE.md  Dockerfile  README.md  analisis_arp_convergencia.xlsx  docker-compose-rutas.yml  docker-compose.yml  ejemplo_uso_oop.py  environment.yml  generate_proto.sh  grpc_server.py  grpc_server_with_queue.py  grupo_1_mejor_ruta.html  grupo_2_mejor_ruta.html  grupo_2_ruta_1_real.html  grupo_2_ruta_2_real.html  grupo_2_ruta_3_real.html  grupo_2_top3_rutas_combinadas.html  grupo_3_mejor_ruta.html  grupo_3_ruta_1_real.html  grupo_3_ruta_2_real.html  grupo_3_ruta_3_real.html  grupo_3_top3_rutas_combinadas.html  grupo_5_mejor_ruta.html  grupo_6_mejor_ruta.html  informe_comparativo_rutas.xlsx  job_queue_system.py  metricas_convergencia_completa_grupo_2.xlsx  mock_grpc_server.py  mrl_amis_results.pickle  pyproject.toml  rabbitmq_integration.py  requirements.txt  requirements_grpc.txt  resultados_mrl_amis.xlsx  set_coverage_grupo_2.xlsx  setup.cfg  setup.py  start_grpc_queue_server.sh  (+7 more)
data/parametros/: CO2_emission_cost.xlsx  accident_risk.xlsx  costos_experiencias.xlsx  costs.xlsx  distances.xlsx  parametros_generales.xlsx  pois.xlsx  preferencias_grupos_turistas.xlsx  tourist_groups.xlsx  travel_times.xlsx
proto/: route_optimization.proto
src/: grpc_server.py
src/AgenteQLearning/: QLearningAgent.py
src/analisis_multi_objetivo_y_metricos/: avarage_ratio_performance.py  frente_de_pareto.py  hypervolume.py  set_coverage.py
src/bucle_principal_mrl_amis/: bucle_iterativo_mrl_amis.py
src/convergencia_iteraciones_mrl_amis/: analisis_convergencia.py
src/ejecucion_iteraciones_mrl_amis/: ejecutar_mrl_amis.py
src/estado_y_recompensa_rl/: definir_comportamiento.py
src/generacionWorkPackages/: funcionesObjetivo.py  workPackages.py
src/runmodel/: main.py  (+3 more)
(+16 files in other folders)
