[metadata]
name = runmodel
version = 0.1.0
description = Multi-objective optimization model with Q-learning
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/runmodel
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    numpy>=1.26,<2
    pandas>=2.0,<3
    openpyxl>=3.1.2
    scikit-learn
    matplotlib
    seaborn
    polyline
    folium

[options.packages.find]
where = src

[options.package_data]
* =
    ../data/parametros/*.xlsx